--- a/Example/Side Scroller/Base.lproj/Main.storyboard
+++ b/Example/Side Scroller/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhZ-FM-uPF" customClass="PHSideScrollingImagePicker">
-                                <rect key="frame" x="0.0" y="95" width="320" height="158"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="233"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZA-ca-rVK">
@@ -38,7 +38,7 @@
                             <constraint firstItem="CZA-ca-rVK" firstAttribute="top" secondItem="dhZ-FM-uPF" secondAttribute="bottom" constant="23" id="Ka2-XZ-0pJ"/>
                             <constraint firstItem="bYZ-W1-CST" firstAttribute="top" secondItem="dhZ-FM-uPF" secondAttribute="bottom" constant="315" id="Lmk-Aw-4V6"/>
                             <constraint firstAttribute="trailing" secondItem="dhZ-FM-uPF" secondAttribute="trailing" id="YYL-rK-2oK"/>
-                            <constraint firstItem="dhZ-FM-uPF" firstAttribute="top" secondItem="yq2-CZ-QUq" secondAttribute="bottom" constant="75" id="aFE-sM-vWw"/>
+                            <constraint firstItem="dhZ-FM-uPF" firstAttribute="top" secondItem="yq2-CZ-QUq" secondAttribute="bottom" id="sxQ-1p-H9Y"/>
                         </constraints>
                     </view>
                     <connections>
