--- a/Example/Side Scroller/Base.lproj/Main.storyboard
+++ b/Example/Side Scroller/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,12 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dhZ-FM-uPF" customClass="PHSideScrollingImagePicker">
-                                <rect key="frame" x="0.0" y="20" width="320" height="302"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CZA-ca-rVK">
-                                <rect key="frame" x="139" y="330" width="43" height="30"/>
+                                <rect key="frame" x="139" y="332" width="43" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Select">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -30,19 +26,28 @@
                                     <action selector="selectPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FNM-sv-QXV"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mn0-FE-GuJ" customClass="PHSideScrollingImagePicker">
+                                <rect key="frame" x="0.0" y="20" width="320" height="302"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="302" id="oeh-kE-XV9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.94610005040322576" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="CZA-ca-rVK" firstAttribute="centerX" secondItem="dhZ-FM-uPF" secondAttribute="centerX" id="1Kd-uk-sky"/>
-                            <constraint firstItem="dhZ-FM-uPF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="JJg-xK-uDy"/>
-                            <constraint firstItem="CZA-ca-rVK" firstAttribute="top" secondItem="dhZ-FM-uPF" secondAttribute="bottom" constant="8" id="Ka2-XZ-0pJ"/>
-                            <constraint firstItem="bYZ-W1-CST" firstAttribute="top" secondItem="dhZ-FM-uPF" secondAttribute="bottom" constant="246" id="Lmk-Aw-4V6"/>
-                            <constraint firstAttribute="trailing" secondItem="dhZ-FM-uPF" secondAttribute="trailing" id="YYL-rK-2oK"/>
-                            <constraint firstItem="dhZ-FM-uPF" firstAttribute="top" secondItem="yq2-CZ-QUq" secondAttribute="bottom" id="sxQ-1p-H9Y"/>
+                            <constraint firstItem="mn0-FE-GuJ" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="0aN-Mf-2rL"/>
+                            <constraint firstItem="CZA-ca-rVK" firstAttribute="centerX" secondItem="mn0-FE-GuJ" secondAttribute="centerX" id="2QA-9K-kJE"/>
+                            <constraint firstItem="CZA-ca-rVK" firstAttribute="top" secondItem="mn0-FE-GuJ" secondAttribute="bottom" constant="10" id="aTn-yQ-Ij1"/>
+                            <constraint firstItem="mn0-FE-GuJ" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="20" symbolic="YES" id="blh-hS-tGk"/>
+                            <constraint firstAttribute="trailing" secondItem="mn0-FE-GuJ" secondAttribute="trailing" id="lRX-a6-AOa"/>
+                            <constraint firstItem="CZA-ca-rVK" firstAttribute="top" secondItem="mn0-FE-GuJ" secondAttribute="bottom" constant="10" id="nbO-Vv-2AY"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imagePicker" destination="dhZ-FM-uPF" id="BIv-lD-ezT"/>
+                        <outlet property="imagePicker" destination="mn0-FE-GuJ" id="kzK-Ro-zsg"/>
+                        <outlet property="view" destination="kh9-bI-dsS" id="lme-0n-kx0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
